--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
       <a href="research.html"><div class="button"><img src="https://cdn-icons-png.flaticon.com/512/2694/2694971.png" alt=""><span>بحث علمي</span></div></a>
       <a href="student.html"><div class="button"><img src="https://www.freeiconspng.com/download/14040" alt=""><span>مساعد الطالب</span></div></a>
       <a href="chat.html"><div class="button"><img src="https://static.vecteezy.com/system/resources/thumbnails/022/597/448/small/3d-chat-message-notification-icon-png.png" alt=""><span>دردشة عامة</span></div></a>
-      <a href="restaurants.html"><div class="button"><img src="https://static.vecteezy.com/system/resources/thumbnails/015/079/413/small_2x/fast-food-restaurant-png.png" alt=""><span>المطاعم</span></div></a>
+      <a href="restaurants.html"><div class="button"><img src="https://static.vecteezy.com/system/resources/thumbnails/015/079/413/small_2x/fast-food-restaurant-png.png" alt=""><span>سمير</span></div></a>
     </div>
 
     <!-- سلايدر -->
